# reader3

./: .gitignore  README.md  annotations.py  pyproject.toml  reader3.py  server.py  stop_server.py
templates/: epub_reader.html  library.html  pdf_reader.html  reader.html
templates/components/: chat_component.html  right_sidebar.html
tests/: conftest.py  test_annotations.py  test_annotations_model.py  test_fresh_api.py  test_server.py  test_ui_regression.py
tools/: ocr_book.py
