[project]
name = "reader3"
version = "0.1.0"
description = "Simple EPUB reader web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.79.0",
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.20.0",
    "pydantic>=2.12.4",
    "pymupdf>=1.27.1",
    "uvicorn>=0.38.0",
]
